@@ -1,6 +1,9 @@
 2007-05-10 Tim
  PATCH: [ 1714596 ] Web: Rename "Users" tab to "Home"
   Web: downloads.php index.php links.php page.inc WinMergePAD.php
+ Rename constant WINMERGE_SUP to TAB_SUPPORT.
+  Web: page.inc
+  Web\support: index.php mailing-lists.php tracker-shortcuts.php
 
 2007-05-07 Tim
  Rename function setVersion() to setTab().
